# gcc-vcg-plugin

./: AUTHORS  Makefile.in  ProjectHome.md  README  configure  configure.ac
example/: README  dump-tree-hierarchy-4.6.vcg  dump-tree-hierarchy-4.7.vcg
libgdl/: Makefile.am  Makefile.in  edge-attr.def  gdl.c  gdl.h  graph-attr.def  node-attr.def
src/: Makefile.am  Makefile.in  cfg.h  dump-function.c  dump-tree.h  except.c  except.h  gdl.c  tags  tree2vcg.c  tree2vcg.h  vcg-plugin.c  vcg-plugin.h  vcg.gdbinit  view.c
trunk/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
trunk/example/: dump-passes.vcg
trunk/libgdl/: Makefile.am  Makefile.in  edge-attr.def  gdl-attr.c  gdl.c  gdl.h  graph-attr.def  node-attr.def
trunk/src/: Makefile.am  cfg.c  dump-cgraph.c  dump-function.c  graph-attr.def  output.c  tags  tree2vcg-lex.l  tree2vcg-yacc.y  vcg-plugin.c  vcg.c  view-cfg.c  view-rtx.c  view-tree.c
trunk/src/libgdl/: gdl.h
trunk/src/libvcg/: edge-attr.def
trunk/vcg-plugin/: Makefile.am  Makefile.in  cfg.c  dump-function.c  gcc-bb.c  gcc-cgraph.c  gcc-function.c  gcc-loop.c  gcc-passes.c  gcc-plugin-api.c  gcc-rtx.c  gcc-tree-4.6.c  gcc-tree-4.7.c  gcc-tree-hierarchy.c  gcc-tree.c  vcg-plugin.c  vcg-plugin.gdbinit  vcg-plugin.h  vcg_plugin.gdbinit
vcg-plugin/: Makefile.am  Makefile.in  dump-function.c  fine-tune.c  gcc-bb.c  gcc-cgraph.c  gcc-function.c  gcc-gimple-hierarchy.c  gcc-passes.c  gcc-plugin-api.c  gcc-rtx.c  gcc-tree-hierarchy.c  gcc-tree.c  gcc-tree.h  vcg-common.c  vcg-plugin.c  vcg-plugin.gdbinit  vcg-plugin.h
(+3 files in other folders)
